apps/team3-matnani/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matnani-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: matnani-api
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
